<resources>
    <string name="app_name">高中生手册</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_tab_knowledge_yw">语文</string>
    <string name="main_tab_knowledge_sx">数学</string>
    <string name="main_tab_knowledge_yy">英语</string>
    <string name="main_tab_knowledge_wl">物理</string>
    <string name="main_tab_knowledge_hx">化学</string>
    <string name="main_tab_knowledge_sw">生物</string>
    <string name="main_tab_knowledge_zz">思想品德</string>
    <string name="main_tab_knowledge_ls">历史</string>
    <string name="main_tab_knowledge_dl">地理</string>

    <string name="main_tab_knowledge_scj">收藏夹</string>
    <string name="main_tab_knowledge_tc">题库</string>
    <string name="main_tab_knowledge_video">视频</string>


    <string name="no_login">未登录</string>
    <string name="login_more">点击登录</string>
    <string name="my_vip">VIP中心</string>
    <string name="share_others">分享给好友</string>
    <string name="comment">送个好评</string>
    <string name="my_about_my">关于我们</string>
    <string name="my_update_pwd">修改密码</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="email_forget_hint">请输入您注册时用的邮箱</string>
    <string name="password_confirm_hint">请再次输入密码</string>
    <string name="password_hint">请输入密码</string>

    <string name="password_old_hint">请输入旧密码</string>
    <string name="password_new_hint">请输入新密码</string>
    <string name="password_new_r_hint">请再次输入密码</string>
    <string name="rest_pwd">请再次输入密码</string>

    <string name="update_pwd">修改密码</string>
    <string name="logout">退出登陆</string>
    <string name="reset_pwd">找回密码</string>

    <string name="back">上一篇</string>
    <string name="next">下一篇</string>

    <string name="user_status">我的特权 : </string>
    <string name="user_account">请选择要开通的特权</string>

    <string name="zfb">支付宝激活</string>
    <string name="wx">微信激活</string>

    <string name="app_chinese_description">
	        【高中生手册】是针对高中生学习定制的一款手机学习软件。本软件不需要网络，包括高中九科主要内容知识点、历年真题模拟题，名师一对一视频和相关科目扩展内容，同学们可随时随地都可以进行学习。软件内容从基础知识到专题整合、从名校模拟到历年真题，一步步引导学生学好高中各门课程，提高各科考试成绩。
    </string>
    <string name="app_help">联系客服</string>

    <string name="app_help_des">
        	客服QQ:2651195978\n客服邮箱：2651195978@qq.com\n客服微信号：xuexisc100
    </string>

    <string name="app_pay">已激活  永久免费</string>
    <string name="app_pay_des">
        为了支撑软件开发的各项支出，其中部分内容设置了激活账户可见。给您带来不便，还请谅解。\n
     为了广大考生能够准确把握高考动向，时刻关注各大名校备考动向。软件会不定时的更新。\n
   部分内容来源于网络。如有侵权，请联系我们，我们会尽快删除。

    </string>

    <string name="click_to_skip">点击跳过</string>

    <string name="vip_ck_lk">理科全套手册+视频+word版资料（*元）</string>
    <string name="vip_ck_wk">文科全套手册+视频+word版资料（*元）</string>
    <string name="vip_ck_yw">语文学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_yy">英语学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_sx">数学学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_wl">物理学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_hx">化学学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_sw">生物学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_ls">历史学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_dd">地理学习手册+视频+word版资料（*元）</string>
    <string name="vip_ck_zz">政治学习手册+视频+word版资料（*元）</string>

    <string name="update_soft">版本更新</string>
    <string name="inform">通知：官方公众号《高中生手册(xuexisc)》</string>

    <string name="vip_power_title">会员权限</string>
    <string name="vip_power">
        \t\t1.享有更多精彩内容\n
        \t\t2.更多实用功能\n
        \t\t3.所有内容可见,永久免费更新\n
        \t\t4.永久会员还可以转让给其他人哦\n
    </string>

    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信</string>

    <string name="github">Github</string>
    <string name="mode_fixed">MODE_FIXED</string>
    <string name="mode_shifting">MODE_SHIFTING</string>

    <string name="bs_static">BS_STATIC</string>
    <string name="bs_ripple">BS_RIPPLE</string>
    <string name="show_text">Show Text</string>
    <string name="_3_items">3 items</string>
    <string name="_4_items">4 items</string>
    <string name="_5_items">5 items</string>
    <string name="auto_hide_badge">Auto hide badge</string>
    <string name="toggle_hide">Toggle Hide</string>
    <string name="toggle_badge">Toggle Badge</string>

    <string name="para1">1. one\n\n
        为人在世，一个 “ 笑 ” 字。 \n\n
        笑对名誉，不争； \n\n
        笑对邪财，不取； \n\n
        笑对生活，不求； \n\n
        笑对波折，不恼； \n\n
        笑对权贵，不卑； \n\n
        笑对人生，无拘； \n\n
        笑对得失，无忧。.\n\n</string>
    <string name="para2">2. two\n\n人生有两大欢乐。   \n\n

        一是拥有后细细的品味；  \n\n

        二是追求之中倍感无比充实。    \n\n

        有些人为了享乐而苦了一生，有些人为了休息却忙了一生。人们总是在不停地追求美好，却往往错过了当下的美好，要记住：贪婪是最真实的贫穷，满足是最真实的财富！ \n\n</string>
    <string name="para3">3.three\n\n人生幸福三诀。\n\n

        （1） 不要拿自己的错误来惩罚自己；\n\n

        （2） 不要拿自己的错误来惩罚别人；  \n\n

        （3） 不要拿别人的错误来惩罚自己。   \n\n

        人有三样东西是无法隐瞒的：咳嗽、贫穷和爱，你想隐瞒，却欲盖弥彰。       \n\n

        人有三样东西是不该挥霍的：身体、金钱和爱，你想挥霍，却得不偿失。\n\n

        人有三样东西是无法挽留的：生命、时间和爱，你想挽留，却渐行渐远。\n\n</string>
    <string name="para4">4.four\n\n人生四大境界： \n\n

        （1） 自律境界：无功不受大禄，无助不受大礼，无胆不挣大钱。  \n\n

        （2） 生活境界：常与高人交往，闲与雅人相会，乐与亲人分享。   \n\n

        （3） 事业境界：尽心负责无憾，养家小康无忧，自己开心无悔。   \n\n

        （4） 感情境界：风流别下流，喜新别厌旧，互帮别拖后。\n\n</string>
    <string name="para5">5.five\n\n人生五耐    \n\n

        （1） 耐冷： 事态炎凉，要随遇而安，坦然处之。    \n\n

        （2） 耐苦： 面对苦难百折不挠，终有云开日现的时候。\n\n

        (3) 耐燥： 面对浮躁心静如水，不为钱权利所诱所累，笑看云卷云舒。     \n\n

        (4) 耐烦： 宰相肚里能撑船，他人气我我不气。        \n\n

        (5) 耐忙： 潇洒自然，活跃思维，享受忙碌。\n\n</string>
    <string name="para6">5.six\n\n人生经典六句话          \n\n

        （1） 容易走的都是下坡路。                  \n\n

        （2） 自由不是想干什么就干什么，而是想不干什么就不干什么。     \n\n

        （3） 命，乃失败者借口；运，乃成功者的谦词。      \n\n

        （4） 打动人心的最佳方法，是谈他最珍爱的东西。        \n\n

        （5） 品格不由你占有的东西决定，而是由你匮乏的东西塑造的。    \n\n

        （6） 郁闷时，坐下来犒劳自已，原谅别人，也放过自己。  \n\n</string>


</resources>
