<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"  
        android:layout_height="match_parent"  
        android:paddingBottom="@dimen/activity_vertical_margin"  
        android:paddingLeft="@dimen/activity_horizontal_margin"  
        android:paddingRight="@dimen/activity_horizontal_margin"  
        android:paddingTop="@dimen/activity_vertical_margin"  
        android:weightSum="1">  
      
        <EditText  
            android:layout_width="fill_parent"  
            android:layout_height="60dp"  
            android:inputType="textEmailAddress"  
            android:ems="10"  
            android:id="@id/email"
            android:layout_alignParentTop="true"
            android:hint="@string/email_hint"
            android:digits="@string/filter_vcode" />
            
        <EditText  
            android:layout_width="fill_parent"  
            android:layout_height="60dp"  
            android:inputType="textPassword"  
            android:ems="10"
            android:id="@id/pwd"
            android:hint="@string/password_hint"  
            android:digits="@string/filter_vcode"
            android:layout_below="@+id/email"   />  
      
        <EditText  
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:digits="@string/filter_vcode"
            android:id="@id/re_pwd"
            android:layout_below="@id/pwd"  
            android:layout_centerHorizontal="true"  
            android:hint="@string/password_confirm_hint"   />  
      
        <Button  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:text="@string/register"  
            android:id="@id/register_btn_sure"  
            android:textSize="18sp"  
            android:textColor="#ffffff"
            android:background="@drawable/crm_back"
            android:layout_below="@+id/re_pwd"
            android:layout_marginTop="20dp" />  
      
    </RelativeLayout>  

</LinearLayout>
