<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:digits="@string/filter_vcode"
            android:hint="@string/email_hint"
            android:inputType="textPersonName" />
        
        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_edit_account"
            android:ems="10"
            android:digits="@string/filter_vcode"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_edit_pwd"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/button_size_small" />
        
        <Button
            android:id="@id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_edit_pwd"
            android:layout_marginTop="52dp"
            android:background="@drawable/crm_back"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/login_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_btn_login"
            android:layout_marginTop="10dp"
            android:background="@drawable/crm_back"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_size" />
    </RelativeLayout>

</RelativeLayout>