<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1" >

        <EditText
            android:id="@id/resetpwd_edit_pwd_old"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:digits="@string/filter_vcode"
            android:hint="@string/password_old_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@id/resetpwd_edit_pwd_new"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/resetpwd_edit_pwd_old"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:digits="@string/filter_vcode"
            android:ems="10"
            android:hint="@string/password_new_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@id/resetpwd_btn_sure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/resetpwd_edit_pwd_new"
            android:layout_marginTop="92dp"
            android:background="@drawable/crm_back"
            android:textColor="@color/body_bai"
            android:text="@string/update_pwd"
            android:textSize="20sp" />

        <EditText
            android:id="@id/resetpwd_edit_pwd_check"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/resetpwd_edit_pwd_new"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:ems="10"
            android:digits="@string/filter_vcode"
            android:hint="@string/password_new_r_hint"
            android:inputType="textPassword" />
    </RelativeLayout>

</LinearLayout>