<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"  
        android:layout_height="match_parent"  
        android:paddingBottom="@dimen/activity_vertical_margin"  
        android:paddingLeft="@dimen/activity_horizontal_margin"  
        android:paddingRight="@dimen/activity_horizontal_margin"  
        android:paddingTop="@dimen/activity_vertical_margin"  
        android:weightSum="1">  
      
        <EditText  
            android:layout_width="fill_parent"  
            android:layout_height="60dp"  
            android:inputType="textEmailAddress"  
            android:ems="10"  
            android:layout_marginTop="60dp"
            android:id="@id/email"
            android:layout_alignParentTop="true"
            android:hint="@string/email_forget_hint"
            android:digits="@string/filter_vcode" />
            
        <Button  
            android:id="@id/forget_btn_sure"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:text="@string/reset_pwd"  
            android:textSize="18sp"  
            android:textColor="#ffffff"
            android:background="@drawable/crm_back"
            android:layout_below="@id/email"
            android:layout_marginTop="40dp" />  
      
    </RelativeLayout>  

</LinearLayout>
