<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reday_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/reday_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- app 介绍 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@color/item_title"
                android:textSize="@dimen/parent_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/app_chinese_description"
                android:textColor="@color/title_coler_black"
                android:textSize="@dimen/child_item_intro" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/content_divider_line"
                android:padding="10dp" />

            <!-- app 帮助 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/app_help"
                android:textColor="@color/item_title"
                android:textSize="@dimen/parent_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/app_help_des"
                android:textColor="@color/title_coler_black"
                android:textSize="@dimen/child_item_intro" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/content_divider_line"
                android:padding="10dp" />

            <!-- 关于正版 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/app_pay"
                android:textColor="@color/item_title"
                android:textSize="@dimen/parent_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/app_pay_des"
                android:textColor="@color/title_coler_black"
                android:textSize="@dimen/child_item_intro" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/content_divider_line"
                android:padding="10dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>