<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_hui"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:id="@id/my_login"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/children_list_press_n"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@id/my_login_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/no_login"
                android:textColor="@color/title_coler_black"
                android:textSize="18sp" />

            <TextView
                android:id="@id/my_login_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/item_title"
                android:text="@string/no_login"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/body_hui" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/body_hui"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/my_vip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/children_list_press_n"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_vip"
                    android:textColor="@color/text_coler_black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/my_share"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/children_list_press_n"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/share_others"
                    android:textColor="@color/text_coler_black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/my_comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/children_list_press_n"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/comment"
                    android:textColor="@color/text_coler_black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/my_about_me"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/children_list_press_n"
                android:clickable="true"
                android:visibility="visible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_about_my"
                    android:textColor="@color/text_coler_black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/my_update_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/children_list_press_n"
                android:clickable="true"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_update_pwd"
                    android:textColor="@color/text_coler_black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/my_logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/children_list_press_n"
                android:clickable="true"
                android:visibility="invisible" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/logout"
                    android:textColor="@color/text_coler_black"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>